update analysis with the latest trimmed
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/script/RNotebook/articulation.Rmd
+++ b/script/RNotebook/articulation.Rmd
@@ -8,7 +8,7 @@ editor_options:
 
 Description: This is a summary of all analyses for articulation.
 
-- Last checked: 07/02/20
+- Last checked: `r format(Sys.Date(), "%d-%b-%Y")`
 
 # Outline - Articulation (KOT, KOR)
 ## [Experimental Design](#design)
@@ -266,7 +266,7 @@ print(kot_art_trial)
 
 ### Plot
 #### Line graph
-```{r kot_art_trial_line_legato, echo = FALSE, fig.height = 4}
+```{r kot_art_trial_line_legato, echo = FALSE, fig.height = 8}
 p_kot_art_trial_legato <- ggplot(data = subset(kot_art_trial, kot_art_trial$Subcomponent == "Legato"), aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
   geom_point() +
@@ -275,7 +275,7 @@ p_kot_art_trial_legato <- ggplot(data = subset(kot_art_trial, kot_art_trial$Subc
 p_kot_art_trial_legato
 ```
 
-```{r kot_art_trial_line_staccato, echo = FALSE, fig.height = 4}
+```{r kot_art_trial_line_staccato, echo = FALSE, fig.height = 8}
 p_kot_art_trial_staccato <- ggplot(data = subset(kot_art_trial, kot_art_trial$Subcomponent == "Staccato"), aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
   geom_point() +
@@ -456,7 +456,7 @@ print(kor_art_trial)
 
 ### Plot
 #### Line graph
-```{r kor_art_trial_line_legato, echo = FALSE, fig.height = 4}
+```{r kor_art_trial_line_legato, echo = FALSE, fig.height = 8}
 p_kor_art_trial_legato <- ggplot(data = subset(kor_art_trial, kor_art_trial$Subcomponent == "Legato"), aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
   geom_point() +
@@ -465,7 +465,7 @@ p_kor_art_trial_legato <- ggplot(data = subset(kor_art_trial, kor_art_trial$Subc
 p_kor_art_trial_legato
 ```
 
-```{r kor_art_trial_line_staccato, echo = FALSE, fig.height = 4}
+```{r kor_art_trial_line_staccato, echo = FALSE, fig.height = 8}
 p_kor_art_trial_staccato <- ggplot(data = subset(kor_art_trial, kor_art_trial$Subcomponent == "Staccato"), aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
   geom_point() +
@@ -618,7 +618,7 @@ print(kot_dyn_trial)
 
 ### Plot
 #### Line graph
-```{r kot_dyn_trial_line_forte, echo = FALSE, fig.height = 4}
+```{r kot_dyn_trial_line_forte, echo = FALSE, fig.height = 8}
 p_kot_dyn_trial_forte <- ggplot(data = subset(kot_dyn_trial, kot_dyn_trial$Subcomponent == "Forte"), aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
   geom_point() +
@@ -627,7 +627,7 @@ p_kot_dyn_trial_forte <- ggplot(data = subset(kot_dyn_trial, kot_dyn_trial$Subco
 p_kot_dyn_trial_forte
 ```
 
-```{r kot_dyn_trial_line_piano, echo = FALSE, fig.height = 4}
+```{r kot_dyn_trial_line_piano, echo = FALSE, fig.height = 8}
 p_kot_dyn_trial_piano <- ggplot(data = subset(kot_dyn_trial, kot_dyn_trial$Subcomponent == "Piano"), aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
   geom_point() +
@@ -779,7 +779,7 @@ print(kor_dyn_trial)
 
 ### Plot
 #### Line graph
-```{r kor_dyn_trial_line_forte, echo = FALSE, fig.height = 4}
+```{r kor_dyn_trial_line_forte, echo = FALSE, fig.height = 8}
 p_kor_dyn_trial_forte <- ggplot(data = subset(kor_dyn_trial, kor_dyn_trial$Subcomponent == "Forte"), aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
   geom_point() +
@@ -788,7 +788,7 @@ p_kor_dyn_trial_forte <- ggplot(data = subset(kor_dyn_trial, kor_dyn_trial$Subco
 p_kor_dyn_trial_forte
 ```
 
-```{r kor_dyn_trial_line_piano, echo = FALSE, fig.height = 4}
+```{r kor_dyn_trial_line_piano, echo = FALSE, fig.height = 8}
 p_kor_dyn_trial_piano <- ggplot(data = subset(kor_dyn_trial, kor_dyn_trial$Subcomponent == "Piano"), aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
   geom_point() +
@@ -1110,7 +1110,7 @@ print(kor_dyn_order_aov)
 
 # Sequence plot
 ## Articulation{#sequence_art}
-```{r seq_art, fig.width = 10, fig.height = 2, echo = FALSE}
+```{r seq_art, fig.width = 20, fig.height = 4, echo = FALSE}
 # For each individual
 kot_art_seq <- aggregate(KOT~SubNr*Condition*Skill*Interval, data = df_kot_art,
                      FUN = function(x){c(N = length(x), mean = mean(x), sd = sd(x))})
@@ -1135,7 +1135,7 @@ p_kot_art_seq
 ```
 
 ## Dynamics{#sequence_dyn}
-```{r seq_dyn, fig.width = 10, fig.height = 2, echo = FALSE}
+```{r seq_dyn, fig.width = 20, fig.height = 4, echo = FALSE}
 # For each individual
 kot_dyn_seq <- aggregate(KOT~SubNr*Condition*Skill*Interval, data = df_kot_dyn,
                      FUN = function(x){c(N = length(x), mean = mean(x), sd = sd(x))})
